--- a/projects/02_trivia_api/starter/frontend/package.json
+++ b/projects/02_trivia_api/starter/frontend/package.json
@@ -2,7 +2,12 @@
   "name": "trivia-app",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://127.0.0.1:5000/",
+  "proxy": {
+    "/auth/google": {
+      "target": "localhost:5000/"
+    }
+  },
+  "secure": false,
   "dependencies": {
     "corsproxy": "^1.5.0",
     "jquery": "^3.4.1",
@@ -13,6 +18,7 @@
   },
   "scripts": {
     "start": "node node_modules/react-scripts/scripts/start.js",
+    "server": "nodemon index.js --ignore client",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
