--- a/projects/02_trivia_api/starter/frontend/package.json
+++ b/projects/02_trivia_api/starter/frontend/package.json
@@ -2,12 +2,9 @@
   "name": "trivia-app",
   "version": "0.1.0",
   "private": true,
-  "proxy": {
-    "/auth/google": {
-      "target": "localhost:5000/"
-    }
-  },
+  "proxy": "https://localhost:5000",
   "secure": false,
+  "ignorePath": true,
   "dependencies": {
     "corsproxy": "^1.5.0",
     "jquery": "^3.4.1",
